--- a/src/app/video-list/video-list.component.css
+++ b/src/app/video-list/video-list.component.css
@@ -1,3 +1,25 @@
+
+.container {
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 20px; 
+}
+
+.icon-container {
+  top: 20px;
+  right: 20px;
+  flex-direction: row; 
+  align-items: center; 
+  display: flex;
+  justify-content: flex-end; 
+}
+
+.icon {
+  font-size: 24px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
 .cart-container {
   display: flex;
   flex-wrap: wrap;
@@ -9,14 +31,24 @@
   margin: 10px;
 }
 
+.hoverable-card:hover {
+  background-color: #f0f0f0;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  transform: scale(1.02); 
+  transition: box-shadow 0.3s, transform 0.3s; 
+}
+
+.hoverable-card {
+  transition: box-shadow 0.3s, transform 0.3s;
+}
+
 .row-break {
   flex-basis: 100%;
 }
 
 .rectangular-image {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+  width: 380px;
+  height: 200px;
 }
 
 .info-container {
@@ -41,4 +73,34 @@
 .date,
 .author {
   margin-top: 10px;
+}
+
+.preview-image-small {
+  width: 200px; 
+  height: 120px; 
+  flex-grow: 1;
+  margin: 10px;
+}
+
+.profile-pic-small {
+  width: 50px; 
+  height: auto; 
+  margin: 10px 15px 10px 15px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #ffffff;
+}
+
+.video-item {
+  flex: 0 0 calc(33.33% - 20px); 
+  margin: 10px 10px 20px 10px; 
+  display: flex;
+}
+
+.center {
+  align-self: center;
+}
+
+.title{
+  flex-grow: 100;
 }
