--- a/src/app/video-list/video-list.component.css
+++ b/src/app/video-list/video-list.component.css
@@ -1,10 +1,3 @@
-
-.container {
-  max-width: 1200px; 
-  margin: 0 auto; 
-  padding: 20px; 
-}
-
 .icon-container {
   top: 20px;
   right: 20px;
@@ -29,6 +22,13 @@
 .cart-item {
   width: calc(33.33% - 20px);
   margin: 10px;
+}
+
+.title-container {
+  width: 100%; /* Adjust the width as needed */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .hoverable-card:hover {
@@ -73,6 +73,7 @@
 .date,
 .author {
   margin-top: 10px;
+  color: rgb(119, 117, 117);
 }
 
 .preview-image-small {
@@ -103,4 +104,11 @@
 
 .title{
   flex-grow: 100;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.created-date,.list-author{
+  color: rgb(119, 117, 117);
 }
