--- a/src/app/video-list/video-list.component.html
+++ b/src/app/video-list/video-list.component.html
@@ -1,48 +1,49 @@
-
 <div class="container">
-<div class="icon-container">
-  <button mat-button  (click)="handleGridViewClick()">
-    <mat-icon class="icon">grid_view</mat-icon>
-  </button>
-  <button mat-button (click)="handleListButtonClick()">
-    <mat-icon class="icon">format_list_bulleted</mat-icon> 
-  </button>
-</div>
-
-<div class="cart-container" *ngIf="isGridFormat">
-  <div *ngFor="let item of userAuthoredVideos; let i = index" class="cart-item">
-    <mat-card class="hoverable-card" >
-      <img mat-card-image [src]="item.previewUrl" alt="Video Preview" class="rectangular-image">
-      <mat-card-content>
-        <h2>{{ item.title }}</h2>
-        <div class="info-container">
-          <div class="left">
-            <p class="date">{{ item.createdDate | date: 'yyyy-MM-dd' }}</p>
-          </div>
-          <div class="right">
-            <img src="{{ item.author.pictureUrl }}" alt="User Profile Pic" class="profile-pic">
-            <p class="author">{{ item.author.name }}</p>
-          </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
-    <div *ngIf="(i + 1) % 3 === 0" class="row-break"></div>
+  <div class="icon-container">
+    <button mat-button (click)="handleGridViewClick()">
+      <mat-icon class="icon">grid_view</mat-icon>
+    </button>
+    <button mat-button (click)="handleListButtonClick()">
+      <mat-icon class="icon">format_list_bulleted</mat-icon>
+    </button>
   </div>
-</div>
 
-<div class="video-list-container" *ngIf="!isGridFormat">
-  <div *ngFor="let video of userAuthoredVideos" class="video-item">
-    <img [src]="video.previewUrl" alt="Video Preview" class="preview-image-small" >
-    
-    <span class="title center" >{{ video.title }}</span>
-    
-    <span class="created-date center" >{{ video.createdDate | date: 'yyyy-MM-dd' }}</span>
-    
-    <img [src]="video.author.pictureUrl" alt="Author Profile Pic" class="profile-pic-small center" >
-
-    <span class="author center" >{{ video.author.name }}</span>
+  <div class="cart-container" *ngIf="isGridFormat">
+    <div *ngFor="let item of userAuthoredVideos; let i = index" class="cart-item">
+      <mat-card class="hoverable-card" (click)="handleCardClick(item.id)">
+        <img mat-card-image [src]="item.previewUrl" alt="Video Preview" class="rectangular-image">
+        <mat-card-content>
+          <div class="title-container">
+            <h2 class="video-title">{{ item.title }}</h2>
+          </div>
+          <div class="info-container">
+            <div class="left">
+              <p class="date">{{ item.createdDate | date: 'dd/MM/yyyy' }}</p>
+            </div>
+            <div class="right">
+              <img src="{{ item.author.pictureUrl }}" alt="User Profile Pic" class="profile-pic">
+              <p class="author">{{ item.author.name }}</p>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+      <div *ngIf="(i + 1) % 3 === 0" class="row-break"></div>
+    </div>
   </div>
-</div>
+
+  <div class="video-list-container" *ngIf="!isGridFormat">
+    <div *ngFor="let video of userAuthoredVideos" class="video-item">
+      <img [src]="video.previewUrl" alt="Video Preview" class="preview-image-small">
+
+      <span class="title center">{{ video.title }}</span>
+
+      <span class="created-date center">{{ video.createdDate | date: 'dd/MM/yyyy' }}</span>
+
+      <img [src]="video.author.pictureUrl" alt="Author Profile Pic" class="profile-pic-small center">
+
+      <span class="list-author center">{{ video.author.name }}</span>
+    </div>
+  </div>
 
 
 </div>
