--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.container {
+    max-width: 1200px; 
+    margin: 0 auto; 
+    padding: 20px; 
+  }
