--- a/src/app/video-detail/video-detail.component.html
+++ b/src/app/video-detail/video-detail.component.html
@@ -8,7 +8,7 @@
           <input matInput *ngIf="isOwnedByCurrentUser" [(ngModel)]="editedTitle" name="editedTitle"
             (input)="checkIfTitleIsEdited()">
         </mat-form-field>
-        <button mat-raised-button *ngIf="isOwnedByCurrentUser" [disabled]="isEditing" color="primary">Save</button>
+        <button mat-raised-button *ngIf="isOwnedByCurrentUser" [disabled]="isEditing" color="primary" (click)="updateVideoTitle()">Save</button>
       </div>
 
       <div *ngIf="!isOwnedByCurrentUser">
@@ -20,6 +20,7 @@
           Your browser does not support the video tag.
         </video>
       </div>
+      <div class="five-pointed-star" [class.active]="isStarActive" [style.display]="displayStyle"></div>
 
       <div class="info-container">
         <div class="left">
